# solana-stablecoin-standard

./: .env.example  .gitignore  .prettierignore  Anchor.toml  Cargo.toml  PLAN_AND_TASKS_VERIFICATION.md  README.md  docker-compose.yml  package.json  tsconfig.json
.github/workflows/: ci-fuzz-schedule.yml  ci.yml
admin-tui/: .mint  README.md  package.json  tsconfig.json
admin-tui/src/: App.test.tsx  App.tsx  Root.tsx  index.tsx  theme.ts
admin-tui/src/components/: Footer.tsx  KeyValueRow.tsx  SectionHeader.tsx  TransactionStatus.test.tsx  TransactionStatus.tsx
admin-tui/src/context/: AppContext.tsx
admin-tui/src/hooks/: useRunTransaction.ts  useStablecoinService.ts
admin-tui/src/screens/: AllowlistScreen.tsx  BlacklistScreen.tsx  BurnScreen.tsx  FreezeScreen.tsx  MainMenu.tsx  MintScreen.tsx  PauseScreen.tsx  RolesScreen.tsx  SeizeScreen.tsx  SetMintScreen.tsx  StatusScreen.tsx  ThawScreen.tsx  UnpauseScreen.tsx
admin-tui/src/services/: loaders.ts  mintStorage.ts  stablecoinService.ts
backend/: Dockerfile  README.md  package.json  vitest.config.ts
backend/__tests__/: health.test.ts
backend/src/: app.ts  events.ts  logger.ts  screening.ts  webhook.ts
cli/: package.json
cli/src/: index.ts
docs/: API.md  ARCHITECTURE.md  COMPLIANCE.md  DEPLOYMENT.md  OPERATIONS.md  ORACLE.md  SDK.md  SECURITY.md  SSS-1.md  SSS-2.md  SSS-3.md  TESTING.md
docs/diagrams/: README.md
frontend/: README.md  eslint.config.mjs  next.config.ts  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
programs/oracle/: Cargo.toml
programs/oracle/src/: lib.rs
programs/stablecoin/: Cargo.toml
programs/stablecoin/src/: errors.rs  lib.rs
programs/stablecoin/src/instructions/: admin.rs  allowlist.rs  burn.rs  compliance.rs  initialize.rs  mint.rs  mod.rs
programs/stablecoin/src/state/: allowlist.rs  compliance.rs  config.rs  minter.rs  mod.rs  role.rs
programs/transfer_hook/: Cargo.toml
programs/transfer_hook/src/: lib.rs
scripts/: deploy-devnet.sh
sdk/: package.json  tsconfig.json
sdk/src/: compliance.ts  confidential.ts  core.ts  index.ts  oracle.ts  presets.ts
tests/: context.ts  stablecoin.test.ts
tests/suites/: oracle.ts  preset-config.ts  sdk-unit.ts  sss1-integration.ts  sss2-vanilla.ts  sss3-allowlist.ts  unit-errors.ts  unit-success.ts
trident-tests/: Cargo.toml  README.md  Trident.toml
trident-tests/fuzz_0/: fuzz_accounts.rs  test_fuzz.rs  types.rs
(+47 files in other folders)
