[package]
name = "oracle"
version = "0.1.0"
description = "SSS Oracle Integration Module — Switchboard price feeds for mint/redeem pricing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "oracle"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
switchboard-on-demand = { version = "0.11", features = ["anchor"] }
