[package]
name = "transfer-hook"
version = "0.1.0"
description = "Solana Stablecoin Standard Transfer Hook"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_hook"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token", "associated_token", "metadata"] }
spl-token-2022 = "6.0.0"
spl-tlv-account-resolution = "0.9.0"
spl-transfer-hook-interface = "0.9.0"
stablecoin = { path = "../stablecoin", features = ["cpi"] }
